--- a/donate.html
+++ b/donate.html
@@ -7,20 +7,20 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.5084dacd.js">
+		<link href="./_app/immutable/assets/link.8da96628.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f1eec083.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a62cf0f7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.40e4c16b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.35710c6f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.d401b4af.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.b4ad4f81.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.60a1d7f4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.f7fb585a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.96bc7b46.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.89702689.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/donate-page.svelte.7107d894.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/link.71c51e0b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.cd774cb5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/donate-page.svelte.be315253.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/link.f23dc004.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END -->
 	</head>
 	<body>
 		<div>
@@ -31,9 +31,9 @@
 <p class="svelte-gy8nzu"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="256" height="146" fill="none"><path fill="#A58E60" d="M256 1.771h-39.246v71.52H256V1.772Z"/><path fill="#C2A86F" d="M192.771 5.795c-10.344-3.805-23.153-4.08-34.048-5.16-9.23-.676-16.355-1.21-24.332.577-.76.201-1.559.402-2.372.608l-.022.021a594.655 594.655 0 0 1-12.402 2.923c-28.106 6.334-62.316 12.432-87.614 18.872C23.952 26.026 9.462 29.196 0 30a25.865 25.865 0 0 0 1.817 5.243c4.618 9.732 14.198 11.86 21.925 11.467a44.435 44.435 0 0 0 3.858-.389c-2.91 1.083-5.845 1.979-8.672 3.687a20.414 20.414 0 0 0-4.246 3.394c1.988 2.342 3.753 3.194 7.248 5.08 4.831 2.617 12.782 1.787 18.037.957 5.434-.856 12.358-4.504 17.614-6.39 4.425-1.534 10.894-3.172 16.434-4.706-.075.28-.166.555-.228.83-2.647 11.376-4.093 22.315-6.364 29.343 7.78 14.228 14.018 27.426 21.44 40.238 11.633-9.274 7.606-26.892-.843-40.465.887-5.788 4.141-17.56 6.103-23.576 14.267-7.374 24.38-14.945 39.006-12.857 12.153 2.014 33.541-.026 41.897 8.405-3.599 11.297-16.346 17.85-22.764 27.185-7.395 9.537-9.54 23.454-.201 31.658 10.769-10.847 13.014-21.374 27.919-28.923 13.94-7.064 27.08-2.564 36.765-12.961V7.83c-7.771 1.136-17.006.455-23.974-2.035Z"/><path fill="#C2A86F" d="M122.609 145.026c15.325 0 27.749-12.423 27.749-27.748 0-15.325-12.424-27.749-27.749-27.749s-27.748 12.424-27.748 27.749 12.423 27.748 27.748 27.748Z"/><path fill="#A58E60" d="m123.343 133.013-.917-3.263c-.087-.315-.087-.315-.398-.228-1.957.551-3.918 1.097-5.875 1.647-.337.092-.341.092-.433-.24-.231-.817-.458-1.634-.685-2.451-.083-.301-.07-.323.227-.406.428-.122.856-.24 1.271-.397.594-.223.812-.608.699-1.232-.07-.376-.171-.739-.271-1.106-1.096-3.909-2.189-7.819-3.289-11.729-.097-.341-.21-.677-.324-1.013-.183-.529-.646-.778-1.205-.682-.463.079-.913.206-1.363.341-.201.061-.293.009-.35-.192-.231-.857-.472-1.713-.721-2.565-.065-.218.009-.301.219-.358 1.97-.546 3.936-1.101 5.902-1.651.332-.092.332-.096.24-.428-.275-.987-.546-1.975-.835-2.962-.069-.232-.013-.328.223-.393.852-.223 1.7-.463 2.543-.712.244-.074.323 0 .384.227.271 1.005.564 2.005.834 3.01.062.231.158.275.376.205.437-.14.887-.253 1.328-.376.315-.087.315-.087.227-.393-.27-.97-.546-1.944-.817-2.913-.104-.376-.104-.376.28-.485.799-.223 1.603-.45 2.403-.673.354-.101.354-.096.45.245.288 1.035.585 2.066.865 3.101.061.232.17.288.397.254 1.485-.241 2.927-.11 4.299.554a4.775 4.775 0 0 1 1.655 1.35c1.009 1.289 1.328 2.744.948 4.334-.271 1.153-.908 2.088-1.782 2.878-.253.232-.533.433-.782.691.406.017.813.026 1.219.048.9.052 1.76.262 2.538.721.991.585 1.738 1.402 2.197 2.468.9 2.097.59 4.058-.699 5.884-.887 1.254-2.123 2.084-3.521 2.678-.223.096-.288.192-.218.432.336 1.154.651 2.316.974 3.473-1.04.293-2.084.586-3.123.874-.035-.101-.07-.197-.097-.297-.279-.996-.567-1.988-.83-2.984-.065-.244-.161-.288-.388-.209-.389.126-.791.227-1.189.336-.489.14-.454.07-.318.555.288 1.048.576 2.101.869 3.149-1.053.302-2.097.59-3.137.883Zm-1.393-11.026c.004 0 .004 0 .009-.005.17.616.336 1.232.519 1.84.105.353.175.725.35 1.057.166.319.349.393.694.327.844-.161 1.66-.41 2.477-.659.677-.206 1.346-.441 1.962-.813 1.97-1.184 1.979-3.853.498-5.172-.69-.616-1.551-.703-2.438-.625-.524.048-1.031.184-1.542.302-1.061.244-2.101.581-3.154.856-.127.035-.166.092-.127.231.258.887.503 1.774.752 2.661Zm-2.451-8.776c.218.786.45 1.568.655 2.354.061.24.166.284.393.214.547-.17 1.101-.319 1.656-.467.9-.236 1.778-.533 2.612-.935 1.228-.59 1.835-1.568 1.687-2.791-.144-1.184-.926-2.11-2.154-2.224-.764-.07-1.511.092-2.245.275-1.027.258-2.036.568-3.058.839-.227.061-.275.157-.21.376.232.786.446 1.572.664 2.359Z"/></svg><!-- HTML_TAG_END --></p>
 <p class="svelte-gy8nzu">Пополните казну регионального отделения Либертарианской партии России.</p>
 
-<nav><a href="./donate/once" class=" svelte-nd5pfo" target="_self" rel="">Разовое пожертвование
+<nav><a href="./donate/once" class=" svelte-1ai65o1" target="_self" rel="">Разовое пожертвование
 </a>
-	<a href="./donate/long" class=" svelte-nd5pfo" target="_self" rel="">Регулярное пожертвование
+	<a href="./donate/long" class=" svelte-1ai65o1" target="_self" rel="">Регулярное пожертвование
 </a>
 </nav></div>
 	<div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="https://yslpn.github.io/spblpr/" class="svelte-sn6y8m">Главная</a>
@@ -70,7 +70,7 @@
 			
 			<script>
 				{
-					__sveltekit_13q4qc0 = {
+					__sveltekit_1yuux93 = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL(".", location).pathname.slice(0, -1),
@@ -80,10 +80,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.5084dacd.js"),
-						import("./_app/immutable/entry/app.35710c6f.js")
+						import("./_app/immutable/entry/start.f1eec083.js"),
+						import("./_app/immutable/entry/app.b4ad4f81.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_13q4qc0.element, {
+						kit.start(app, __sveltekit_1yuux93.element, {
 							node_ids: [0, 2, 4],
 							data,
 							form: null,
