--- a/donate/once.html
+++ b/donate/once.html
@@ -7,20 +7,20 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.49e12903.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.5084dacd.js">
+		<link href="../_app/immutable/assets/link.8da96628.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.f1eec083.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a62cf0f7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.40e4c16b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.35710c6f.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.d401b4af.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.b4ad4f81.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.60a1d7f4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.f7fb585a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.96bc7b46.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.89702689.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-once-page.svelte.b73998bd.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/link.71c51e0b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/once"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/once"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END -->
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.cd774cb5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-once-page.svelte.15dd675c.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/link.f23dc004.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/once"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/once"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END -->
 	</head>
 	<body>
 		<div>
@@ -29,15 +29,15 @@
 <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by">
 <h1 class="svelte-1s5foe9">Разовое пожертвование</h1>
 
-<ul><li><a href="./sber" class=" svelte-nd5pfo" target="_self" rel="">Сбербанк
+<ul><li><a href="./sber" class=" svelte-1ai65o1" target="_self" rel="">Сбербанк
 </a>
-		</li><li><a href="./tinkoff" class=" svelte-nd5pfo" target="_self" rel="">Тинькофф
+		</li><li><a href="./tinkoff" class=" svelte-1ai65o1" target="_self" rel="">Тинькофф
 </a>
-		</li><li><a href="./alfabank" class=" svelte-nd5pfo" target="_self" rel="">Альфа-Банк
+		</li><li><a href="./alfabank" class=" svelte-1ai65o1" target="_self" rel="">Альфа-Банк
 </a>
 		</li>
 
-	<li><a href="./crypto" class=" svelte-nd5pfo" target="_self" rel="">Криптовалюты
+	<li><a href="./crypto" class=" svelte-1ai65o1" target="_self" rel="">Криптовалюты
 </a></li>
 </ul></div>
 	<div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="https://yslpn.github.io/spblpr/" class="svelte-sn6y8m">Главная</a>
@@ -76,7 +76,7 @@
 			
 			<script>
 				{
-					__sveltekit_13q4qc0 = {
+					__sveltekit_1yuux93 = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -86,10 +86,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.5084dacd.js"),
-						import("../_app/immutable/entry/app.35710c6f.js")
+						import("../_app/immutable/entry/start.f1eec083.js"),
+						import("../_app/immutable/entry/app.b4ad4f81.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_13q4qc0.element, {
+						kit.start(app, __sveltekit_1yuux93.element, {
 							node_ids: [0, 2, 8],
 							data,
 							form: null,
