--- a/donate/sber.html
+++ b/donate/sber.html
@@ -7,17 +7,17 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.a9981ce8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.f1eec083.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.0e3b2dd0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.40e4c16b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.99e9a108.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.b4ad4f81.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.60a1d7f4.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.505c8148.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.1e81f075.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.96bc7b46.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.654a5b3d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.cd774cb5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.a7856228.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.160a5020.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.32e3d1b0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.0aade1e3.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/sber"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/sber"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END -->
@@ -72,7 +72,7 @@
 			
 			<script>
 				{
-					__sveltekit_1yuux93 = {
+					__sveltekit_1ezdsxd = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -82,10 +82,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.f1eec083.js"),
-						import("../_app/immutable/entry/app.b4ad4f81.js")
+						import("../_app/immutable/entry/start.0e3b2dd0.js"),
+						import("../_app/immutable/entry/app.505c8148.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1yuux93.element, {
+						kit.start(app, __sveltekit_1ezdsxd.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
