--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.8da96628.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f1eec083.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0e3b2dd0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.40e4c16b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.99e9a108.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.b4ad4f81.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.60a1d7f4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.505c8148.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.1e81f075.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.96bc7b46.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.654a5b3d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.61f7bf34.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.69c09af3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.f23dc004.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-jox9uy_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-jox9uy_END -->
 	</head>
 	<body>
@@ -68,7 +68,7 @@
 			
 			<script>
 				{
-					__sveltekit_1yuux93 = {
+					__sveltekit_1ezdsxd = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL(".", location).pathname.slice(0, -1),
@@ -78,10 +78,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f1eec083.js"),
-						import("./_app/immutable/entry/app.b4ad4f81.js")
+						import("./_app/immutable/entry/start.0e3b2dd0.js"),
+						import("./_app/immutable/entry/app.505c8148.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1yuux93.element, {
+						kit.start(app, __sveltekit_1ezdsxd.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
